--- a/UI-MVC/Views/Home/Portal.cshtml
+++ b/UI-MVC/Views/Home/Portal.cshtml
@@ -197,7 +197,7 @@
         }
 
         var markupOrganisation = '<li class="organisation" data-id="${Id}">' +
-         '<img class="thumbnail" src="/Content/img/Organisations/${BannerUrl}"/>' +
+         '<img class="round" style="width: 100px; height: 100px" src="/Content/img/playlistheader.jpg"/>' +
          '<span class="name">${Name}</span>' +
          '</li>';
  
