--- a/UI-MVC/Views/Organisations/Create.cshtml
+++ b/UI-MVC/Views/Organisations/Create.cshtml
@@ -4,17 +4,6 @@
     ViewBag.Title = "Create";
 }
 
-@if (!ViewData.ModelState.IsValid)
-{
-    var validationErrors = string.Join(",",
-                    ViewData.ModelState.Values.Where(E => E.Errors.Count > 0)
-                    .SelectMany(E => E.Errors)
-                    .Select(E => E.ErrorMessage)
-                    .ToArray());
-
-    <p class="field-validation-error">@validationErrors</p>
-}
-
 <div class="title">
     <h1>Create</h1>
     a new organisation
@@ -53,6 +42,7 @@
        
     </div>
 }
+<div class="row"></div>
 <script>
     document.getElementById('banner_click').onclick = function () {
         document.getElementById('bannerImage').click();
