--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -453,11 +453,11 @@ header {
     height: 100%;
     background-size: cover;
     background-position: center center;
-    filter: blur(15px);
-    -webkit-filter: blur(15px);
-    -moz-filter: blur(15px);
-    -o-filter: blur(15px);
-    -ms-filter: blur(15px); }
+    filter: blur(10px);
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -o-filter: blur(10px);
+    -ms-filter: blur(10px); }
   #fullscreenplayer #darkoverlay {
     position: relative;
     left: 0;
@@ -476,7 +476,8 @@ header {
     position: absolute;
     left: 10%;
     bottom: 10%;
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     background-image: url("/Content/img/default_cover.png"); }
   #fullscreenplayer #nowPlayingArtist {
     position: absolute;
